; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/test/extr_test-fdleak.c_client_event_cb.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/test/extr_test-fdleak.c_client_event_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufferevent = type { i32 }

@BEV_EVENT_CONNECTED = common dso_local global i16 0, align 2
@BEV_EVENT_ERROR = common dso_local global i16 0, align 2
@.str = private unnamed_addr constant [25 x i8] c"Client socket got error!\00", align 1
@EV_READ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bufferevent*, i16, i8*)* @client_event_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @client_event_cb(%struct.bufferevent* %0, i16 signext %1, i8* %2) #0 {
  %4 = alloca %struct.bufferevent*, align 8
  %5 = alloca i16, align 2
  %6 = alloca i8*, align 8
  %7 = alloca i8, align 1
  store %struct.bufferevent* %0, %struct.bufferevent** %4, align 8
  store i16 %1, i16* %5, align 2
  store i8* %2, i8** %6, align 8
  %8 = load i16, i16* %5, align 2
  %9 = sext i16 %8 to i32
  %10 = load i16, i16* @BEV_EVENT_CONNECTED, align 2
  %11 = sext i16 %10 to i32
  %12 = and i32 %9, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  store i8 65, i8* %7, align 1
  %15 = load %struct.bufferevent*, %struct.bufferevent** %4, align 8
  %16 = call i32 @bufferevent_write(%struct.bufferevent* %15, i8* %7, i32 1)
  br label %28

17:                                               ; preds = %3
  %18 = load i16, i16* %5, align 2
  %19 = sext i16 %18 to i32
  %20 = load i16, i16* @BEV_EVENT_ERROR, align 2
  %21 = sext i16 %20 to i32
  %22 = and i32 %19, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %17
  %25 = call i32 @puts(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %26 = call i32 @exit(i32 2) #3
  unreachable

27:                                               ; preds = %17
  br label %28

28:                                               ; preds = %27, %14
  %29 = load %struct.bufferevent*, %struct.bufferevent** %4, align 8
  %30 = load i32, i32* @EV_READ, align 4
  %31 = call i32 @bufferevent_enable(%struct.bufferevent* %29, i32 %30)
  ret void
}

declare dso_local i32 @bufferevent_write(%struct.bufferevent*, i8*, i32) #1

declare dso_local i32 @puts(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @bufferevent_enable(%struct.bufferevent*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
